[gd_scene load_steps=9 format=2]

[ext_resource path="res://Bar.gd" type="Script" id=1]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "bar_L"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0, 0.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../R_pos/R_Bar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../R_pos:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../R_pos:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "bar_D"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "bar_D2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../R_pos/R_Bar:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 180.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "bar_L"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ 0.0, -70.0, 0.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "bar_R"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../../R_pos:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 180.0, 120.0, 180.0 ]
}

[node name="Bar2" type="Node2D" groups=["bar2"]]
script = ExtResource( 1 )

[node name="L_pos" type="Position2D" parent="."]
position = Vector2( 144, 832 )

[node name="L_AnimationPlayer" type="AnimationPlayer" parent="L_pos"]
root_node = NodePath("../L_Bar")
anims/RESET = SubResource( 7 )
anims/bar_L = SubResource( 8 )

[node name="L_Bar" type="KinematicBody2D" parent="L_pos"]
position = Vector2( 152, 16 )
collision_layer = 4

[node name="Polygon2D" type="Polygon2D" parent="L_pos/L_Bar"]
position = Vector2( -480, -208 )
polygon = PoolVector2Array( -72, 48, 328, 200, 328, 184, -61.6859, 4.74446, -72, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="L_pos/L_Bar"]
position = Vector2( -480, -152 )
scale = Vector2( 1.0049, 2.22716 )
build_mode = 1
polygon = PoolVector2Array( 326.401, 64.6563, -71.6491, -3.59201, -71.6489, -25.1441, 326.401, 57.4723 )

[node name="R_pos" type="Position2D" parent="."]
position = Vector2( 1200, 832 )
rotation = 3.14159

[node name="R_AnimationPlayer" type="AnimationPlayer" parent="R_pos"]
root_node = NodePath("../../L_pos/L_Bar")
anims/RESET = SubResource( 13 )
anims/bar_D = SubResource( 14 )
anims/bar_D2 = SubResource( 15 )
anims/bar_L = SubResource( 16 )
anims/bar_R = SubResource( 17 )

[node name="R_Bar" type="KinematicBody2D" parent="R_pos"]
position = Vector2( 224, -24.0001 )
collision_layer = 4

[node name="Polygon2D2" type="Polygon2D" parent="R_pos/R_Bar"]
position = Vector2( -328, 135.999 )
rotation = -2.55903e-06
polygon = PoolVector2Array( -296, 72, -296, 72, 104, -104, 104, -120, -296, 32.0001, -296, 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="R_pos/R_Bar"]
position = Vector2( -328, 136 )
build_mode = 1
polygon = PoolVector2Array( 104, -104, -296, 72.0002, -296, 32.0001, 104, -120 )

[connection signal="animation_finished" from="L_pos/L_AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="R_pos/R_AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
